[RAP-3885: fixed the overlap issue]

--- a/app_storefront/cartridge/scss/default/_primary_region_elements.scss
+++ b/app_storefront/cartridge/scss/default/_primary_region_elements.scss
@@ -81,8 +81,6 @@ h1 {
 .section-header-note {
 	font-size: 0.9em;
 	font-weight: 400;
-	position: absolute;
-	right: 1em;
 	text-transform: none;
 }
 
